# blue-nrg-test

./: .gitignore  CMakeLists.txt  configure.sh  gdbinit  stm32.cmake
src/: clock.c  errorHandler.c  errorHandler.h  main.cc  sensor_service.c  sensor_service.h  stm32_bluenrg_ble.c  stm32_bluenrg_ble.h  stm32f4xx_it.c  stm32f4xx_nucleo_bluenrg.h  stm32f7xx_hal_conf.h  stm32f7xx_it.c  syscalls.c
