CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (CMAKE_VERBOSE_MAKEFILE OFF)

PROJECT (blue-nrg-test)
include (stm32.cmake)

SET(USB_LIB "" CACHE STRING "")

ADD_DEFINITIONS ("-DHSE_VALUE=${CRYSTAL_HZ}")
ADD_DEFINITIONS ("-D__IEEE_LITTLE_ENDIAN")
ADD_DEFINITIONS ("-DENDIAN_H_MACHINE_DIR")
INCLUDE_DIRECTORIES("src/")

# +-----------------+
# | BlueNRG library |
# +-----------------+
SET (BLUE_NRG_ROOT "/home/iwasz/workspace/STM32CubeExpansion_BLE1_V2.5.2/Middlewares/ST/")
ADD_DEFINITIONS ("-DNVIC_RTC_WAKEUP_HANDLER_ID=RTC_WKUP_IRQn")
INCLUDE_DIRECTORIES("${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes")
#LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/hci_dma_lp.c")
#LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_utils_small.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_gap_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_gatt_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_hal_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_updater_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_l2cap_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_utils.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_IFR.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/hci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/utils/osal.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/utils/gp_timer.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/utils/list.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hal.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hal_types.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/list.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_aci_const.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gatt_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_l2cap_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/clock.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/link_layer.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_utils.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/osal.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gatt_server.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_hal_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hci_const.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/sm.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/debug.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gap_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/ble_status.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_updater_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/compiler.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gap.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/gp_timer.h")
INCLUDE_DIRECTORIES("${BLUE_NRG_ROOT}/TimerServer/inc/")
INCLUDE_DIRECTORIES("${BLUE_NRG_ROOT}/TimerServer/STM32xx_HAL_TimerServer_Drivers/inc/")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/TimerServer/inc/stm32xx_timerserver.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/TimerServer/inc/stm32xx_timerserver_conf.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/TimerServer/src/stm32xx_timerserver.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/TimerServer/STM32xx_HAL_TimerServer_Drivers/inc/stm32xx_hal_timerserver_rtc.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/TimerServer/STM32xx_HAL_TimerServer_Drivers/inc/stm32xx_hal_timerserver_exti.h")

# +--------------+
# | STM Cube     |
# +--------------+
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_def.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_i2c_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_wwdg.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_ll_sdmmc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_sai.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_crc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_eth.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_irda.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_pwr_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_cryp.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dcmi.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_pwr.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_qspi.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_irda_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_spi.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rtc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dma.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_nand.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rng.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rtc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_ltdc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dac.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rcc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_usart_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_spdifrx.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_rcc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_i2s.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_sram.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_sdram.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dma2d.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_sai_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_can.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_i2c.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_cryp_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_smartcard.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_tim_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_cortex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_lptim.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_usart.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_ll_usb.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_pcd.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_hash_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_ll_fmc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_flash_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_tim.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_smartcard_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_sd.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_hcd.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_conf_template.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_adc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dcmi_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_flash.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dma_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_gpio.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_gpio_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_iwdg.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_nor.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_hash.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_pcd_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_dac_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_crc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_adc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_cec.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_nor.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_uart.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_adc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_can.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_iwdg.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rng.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_lptim.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hcd.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_crc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sai.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_fmc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cec.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rtc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cryp_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rtc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2s.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smartcard.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_wwdg.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_crc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_ltdc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sd.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_eth.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_sdmmc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_adc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_msp_template.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dcmi.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_usart.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma2d.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_qspi.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cryp.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_spdifrx.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hash_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sai_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hash.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smartcard_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_irda.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_gpio.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_spi.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dcmi_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sram.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_nand.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cortex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sdram.c")

LIST (APPEND APP_SOURCES "${STARTUP_CODE}")

# +--------------+
# | Common i USB |
# +--------------+
SET(USB_LIB "" CACHE STRING "")
ADD_DEFINITIONS (-DUSE_USB_FS)
ADD_DEFINITIONS (-DHAL_INCLUDE="stm32f7xx_hal.h")
ADD_DEFINITIONS (-DUSE_USB_FS)
ADD_DEFINITIONS (-DUSB_DEVICE_REVISION=0x01)
ADD_DEFINITIONS (-DUSB_DEVICE_VERSION=0x01)

INCLUDE_DIRECTORIES("${USB_LIB}/Core/Inc")
INCLUDE_DIRECTORIES("${USB_LIB}/Class/CDC/Inc")
INCLUDE_DIRECTORIES("../gpa-common")
INCLUDE_DIRECTORIES("../gpa-common/usb/")
LIST (APPEND APP_SOURCES "../gpa-common/common_hal.h")
LIST (APPEND APP_SOURCES "../gpa-common/MicroSerialize.h")
LIST (APPEND APP_SOURCES "../gpa-common/micro_serialize.h")
LIST (APPEND APP_SOURCES "../gpa-common/MicroDate.h")
LIST (APPEND APP_SOURCES "../gpa-common/MicroDate.cc")
LIST (APPEND APP_SOURCES "../gpa-common/MicroSerialize.cc")
LIST (APPEND APP_SOURCES "../gpa-common/ioBuffer/IoBuffer.h")
LIST (APPEND APP_SOURCES "../gpa-common/ioBuffer/IoBuffer.cc")
LIST (APPEND APP_SOURCES "../gpa-common/ioBuffer/io_buffer.h")
LIST (APPEND APP_SOURCES "../gpa-common/gpa_magic_numbers.h")
LIST (APPEND APP_SOURCES "../gpa-common/gpa_magic_numbers_impl.h")
LIST (APPEND APP_SOURCES "../gpa-common/string_utils.h")
LIST (APPEND APP_SOURCES "../gpa-common/string_utils.c")
LIST (APPEND APP_SOURCES "../gpa-common/usb/usbd_it.c")
LIST (APPEND APP_SOURCES "../gpa-common/usb/usbd_conf.c")
LIST (APPEND APP_SOURCES "../gpa-common/usb/usbd_conf.h")
LIST (APPEND APP_SOURCES "../gpa-common/usb/usbd_desc.c")
LIST (APPEND APP_SOURCES "../gpa-common/usb/usbd_desc.h")
LIST (APPEND APP_SOURCES "../gpa-common/usb/vendor_specific_interface.c")
LIST (APPEND APP_SOURCES "../gpa-common/usb/vendor_specific_interface.h")
LIST (APPEND APP_SOURCES "../gpa-common/usb/vendor_specific_class.h")
LIST (APPEND APP_SOURCES "../gpa-common/usb/vendor_specific_class.c")
LIST (APPEND APP_SOURCES "../gpa-common/usb/Usb.h")
LIST (APPEND APP_SOURCES "../gpa-common/usb/Usb.cc")
LIST (APPEND APP_SOURCES "../gpa-common/usb/Debug.h")
LIST (APPEND APP_SOURCES "../gpa-common/usb/Debug.cc")
LIST (APPEND APP_SOURCES "../gpa-common/usb/debug_usb.h")
LIST (APPEND APP_SOURCES "../gpa-common/errorHandler.c")
LIST (APPEND APP_SOURCES "../gpa-common/errorHandler.h")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Src/usbd_core.c")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Src/usbd_ctlreq.c")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Src/usbd_ioreq.c")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Inc/usbd_core.h")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Inc/usbd_ctlreq.h")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Inc/usbd_ioreq.h")
LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Inc/usbd_def.h")

# +--------------+
# | User code    |
# +--------------+
LIST (APPEND APP_SOURCES "src/main.cc")
LIST (APPEND APP_SOURCES "src/sensor_service.c")
LIST (APPEND APP_SOURCES "src/sensor_service.h")
LIST (APPEND APP_SOURCES "src/stm32_bluenrg_ble.c")
LIST (APPEND APP_SOURCES "src/stm32_bluenrg_ble.h")
#LIST (APPEND APP_SOURCES "src/stm32_bluenrg_ble_dma_lp.c")
#LIST (APPEND APP_SOURCES "src/stm32_bluenrg_ble_dma_lp.h")
LIST (APPEND APP_SOURCES "src/stm32f7xx_hal_conf.h")
LIST (APPEND APP_SOURCES "src/stm32f7xx_it.c")
LIST (APPEND APP_SOURCES "src/syscalls.c")
LIST (APPEND APP_SOURCES "src/system_stm32f7xx.c")
LIST (APPEND APP_SOURCES "src/stm32f4xx_nucleo_bluenrg.h")
LIST (APPEND APP_SOURCES "src/clock.c")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${APP_SOURCES})
ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin ALL DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)

FIND_PROGRAM (ST_FLASH st-flash)
ADD_CUSTOM_TARGET("upload" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${ST_FLASH} --reset write ${CMAKE_PROJECT_NAME}.bin 0x8000000)


